# cpp-and-computational-geometry-courses

./: ProjectHome.md  demin.dmitriy.sln
cg2011/p1.1/: arithmetic.h  geometry.cpp  geometry.h  task_p1.1.cpp
cg2012.1/01/: CMakeLists.txt  main.cpp  visualizer.py
cg2012.1/02/: CMakeLists.txt  main.cpp  test.py
cg2012.1/10/: CMakeLists.txt  main.cpp  output_format.txt  test.py  visualizer.py
cg2012.1/11/: CMakeLists.txt  main.cpp  test.py  visualizer.py
cg2012.1/13/: main.cpp  test.py
cg2012.1/15/: main.cpp
cg2012.1/18/: CMakeLists.txt  main.cpp  statement.txt  test.py  tests.txt  tidy.py  visualizer.py
cg2012.1/18/cgal-solution/: CMakeLists.txt  main.cpp
cg2012.1/18/checker/: readme.txt
cg2012.1/lib/: circle.impl.h  convex_hull.impl.h  diameter.impl.h  geometry.cpp  geometry.h  geometry_gmp.cpp  mindisk.impl.h  rasterize.impl.h  visualizer_base.py  voronoi_diagram.cpp  voronoi_diagram.impl.h
cg2012.1/lib/geometry/: diameter.h  geometry.cpp  geometry.h  geometry_fwd.h  math.h  mindisk.h  point_base.h  predicate.h  rasterize.h  robust_arithmetic.h  segment_base.h  segments_intersection.h  voronoi_diagram.h
cg2012.1/lib/geometry/predicate/: expression_tree.h  functions.h
cg2012.1/lib/geometry/segment_intersections/: event_queue.h  intersection_descriptor.h  segment_to_event_compare.h
cg2012.1/lib/geometry/voronoi_diagram/: predicates.h  voronoi_diagram.cpp  voronoi_diagram_construction.h
cg2012.1/lib/voronoi_diagram/: voronoi_diagram_construction.h
cg2012.1/testgen/: CMakeLists.txt  pointset.cpp
problem1.1/: cordinate.h  problem1.1.vcxproj
problem1.2/: main.cpp  problem1.2.vcxproj  problem1.2.vcxproj.filters
problem1.3/: in.txt  main.cpp  out.txt  problem1.3.vcxproj
problem1.4/: big_int.cpp  big_int.h  failed-test.txt  in.txt  last-message.txt  main.cpp  main.h  out.txt  problem1.4.vcxproj  problem1.4.vcxproj.filters
problem2.1/: big_int.cpp  big_int.h  num_vector.h  problem2.1.vcxproj
problem3.1/: big_int.cpp  big_int.h  calculator.cpp  func_factory.cpp  func_factory.h  in.txt  last-message.txt  main.cpp  out.txt  problem3.1.vcxproj
problem4.1/: last-message.txt  main.cpp  meta_big_int.h  meta_check.h  problem4.1.vcxproj
problem4.2/: last-message.txt  list.h  main.cpp  problem4.2.vcxproj  problem4.2.vcxproj.filters
trunk/: demin.dmitriy.sln
trunk/cg2011/p1.1/: CMakeLists.txt  geometry.cpp  geometry.h  robust_arithmetic.h  task_p1.1.cpp
trunk/cg2012.1/01/: CMakeLists.txt  main.cpp  test.py  visualizer.py
trunk/cg2012.1/02/: CMakeLists.txt  main.cpp  test.py
trunk/cg2012.1/10/: main.cpp  output_format.txt  test.py
trunk/cg2012.1/11/: CMakeLists.txt  main.cpp  test.py  visualizer.py
trunk/cg2012.1/13/: CMakeLists.txt  main.cpp
trunk/cg2012.1/15/: CMakeLists.txt  main.cpp  test.py  visualizer.py
trunk/cg2012.1/18/: CMakeLists.txt  main.cpp  statement.txt  test.py  tests.txt  visualizer.py  visualizer_cgal.py
trunk/cg2012.1/18/cgal-solution/: main.cpp
trunk/cg2012.1/18/checker/: CMakeLists.txt  main.cpp
trunk/cg2012.1/lib/: base_point.impl.h  circle.impl.h  convex_hull.impl.h  diameter.impl.h  geometry.cpp  geometry.h  geometry_gmp.cpp  rasterize.impl.h  robust_arithmetic.h  visualizer_base.py  voronoi_diagram.cpp  voronoi_diagram.impl.h
trunk/cg2012.1/lib/geometry/: circle.h  convex_hull.h  diameter.h  geometry.cpp  geometry_fwd.h  mindisk.h  predicate.h  segments_intersection.h
trunk/cg2012.1/lib/geometry/predicate/: error_bound.h  predicate.impl.h  util.h
trunk/cg2012.1/lib/geometry/segment_intersections/: ordered_segment.h  structures.h
trunk/cg2012.1/lib/geometry/voronoi_diagram/: predicates.h  structures.h  voronoi_diagram_construction.h
trunk/cg2012.1/lib/geometry/workaround/: boost_intrusive_set.hpp
trunk/cg2012.1/lib/voronoi_diagram/: structures.h  voronoi_diagram.cpp
trunk/problem1.1/: last-message.txt  main.cpp  main.h  out.txt  problem1.1.vcxproj  problem1.1.vcxproj.filters
trunk/problem1.2/: last-message.txt  main.cpp  out.txt  problem1.2.vcxproj  problem1.2.vcxproj.filters
trunk/problem1.3/: failed-test.txt  in.txt  last-message.txt  main.cpp  out.txt  problem1.3.vcxproj
trunk/problem1.4/: big_int.cpp  big_int.h  compilation-warnings.txt  failed-test.txt  in.txt  last-message.txt  main.cpp  main.h  out.txt  timer.h
trunk/problem2.1/: big_int.cpp  last-message.txt  num_vector.cpp  problem2.1.vcxproj  problem2.1.vcxproj.filters
trunk/problem3.1/: calculator.h  functions.cpp  in.txt  out.txt  problem3.1.vcxproj  problem3.1.vcxproj.filters
trunk/problem4.1/: meta_ctassert.h  meta_list.h  problem4.1.vcxproj  problem4.1.vcxproj.filters
